# codeforces-contest-preparer

./: Cargo.toml  README.md
rust/: Cargo.toml
rust/src/: main.rs
src/: main.rs
